--- a/style.css
+++ b/style.css
@@ -1,30 +1,18 @@
+html,
 body {
-  font-family: Arial, sans-serif;
+  height: 100%;
   margin: 0;
-  padding: 0;
-}
-
-header {
-  background-color: #333;
+  background: linear-gradient(to bottom, #000000, #434343);
   color: white;
-  padding: 20px;
-  text-align: center;
-}
-
-h1 {
-  margin: 0;
 }
 
 section {
+  background: transparent;
   padding: 20px;
 }
 
+header,
 footer {
-  background-color: #333;
-  color: white;
+  background: transparent;
   text-align: center;
-  padding: 10px;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
 }
