--- a/style.css
+++ b/style.css
@@ -1,18 +1,165 @@
 html,
 body {
-  height: 100%;
-  margin: 0;
-  background: linear-gradient(to bottom, #000000, #434343);
-  color: white;
+  width: 100%;
+  background-color: #e9ebec;
+  color: black;
 }
 
-section {
-  background: transparent;
-  padding: 20px;
-}
-
+section,
 header,
 footer {
   background: transparent;
   text-align: center;
+}
+
+.mode-toggle-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+  border: 2px solid white;
+  background: white;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background 1s, border-color 1s;
+}
+
+.mode-toggle-btn:hover {
+  background: #0c151d;
+  border-color: #0c151d;
+}
+
+.profile-card {
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  border-radius: 10px;
+  max-width: 100%;
+  margin: 20px auto;
+  justify-content: center;
+}
+
+.profile-pic-square {
+  position: relative;
+  width: 120px;
+  height: 150px;
+  border: 3px solid #004400;
+  box-sizing: border-box;
+  margin-top: 20px;
+  border-radius: 10px;
+}
+
+.profile-pic-square img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 7px;
+}
+
+.profile-info {
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  color: black;
+}
+
+.profile-info h1 {
+  margin: 0;
+  font-size: 46px;
+}
+
+.profile-info p {
+  margin: 5px 0;
+  font-size: 22px;
+}
+
+.social-icons {
+  display: flex;
+  gap: 10px;
+  margin-top: 5px;
+}
+
+.social-icons a {
+  text-decoration: none;
+  font-size: 25px;
+  color: #000;
+  transition: background-color 1s ease;
+}
+
+.social-icons a:hover {
+  color: #004400;
+}
+
+.custom-btn {
+  width: 200px;
+  display: inline-block;
+  margin: 10px 10px;
+  padding: 12px 20px;
+  text-decoration: none;
+  border-radius: 8px;
+  font-weight: bold;
+  transition: background-color 1s ease;
+  background-color: white;
+  color: black;
+  border: none;
+}
+
+.custom-btn:hover {
+  background-color: #004400;
+  color: white;
+}
+
+.work-card {
+  justify-content: center;
+  display: flex;
+  background-color: white; /* light background */
+  border-radius: 10px;
+  padding: 5px;
+  width: 700px;
+  margin: 20px auto;
+}
+
+.toggle-btn {
+  width: 350px;
+  display: inline-block;
+  margin: 10px 10px;
+  padding: 12px 20px;
+  text-decoration: none;
+  border-radius: 8px;
+  font-weight: bold;
+  transition: background-color 1s ease;
+  background-color: white;
+  color: black;
+  border: none;
+}
+
+.toggle-btn:hover {
+  background-color: #004400;
+  color: white;
+}
+
+.toggle-btn.active {
+  background-color: #004400;
+  color: white;
+}
+
+.content-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+.about-card {
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  border-radius: 10px;
+  max-width: 100%;
+  margin: 20px auto;
+  justify-content: center;
 }
