--- a/style.css
+++ b/style.css
@@ -150,20 +150,18 @@ footer {
   text-decoration: none;
   border-radius: 8px;
   font-weight: bold;
-  transition: background-color 1s ease;
+  transition: background-color 0.6s ease;
   background-color: white;
   color: black;
   border: none;
 }
 
 .toggle-btn:hover {
-  background-color: #004400;
-  color: white;
+  background-color: #d7d7d7;
 }
 
 .toggle-btn.active {
-  background-color: #004400;
-  color: white;
+  background-color: #d7d7d7;
 }
 
 .content-section {
@@ -173,28 +171,6 @@ footer {
   flex-direction: column;
   margin-top: 20px;
   font-weight: bold;
-}
-
-.project-card {
-  display: flex;
-  align-items: center;
-  padding: 15px;
-  border-radius: 10px;
-  max-width: 100%;
-  margin: 20px auto;
-  justify-content: center;
-}
-
-.project-card img {
-  display: flex;
-  align-items: center;
-  padding: 15px;
-  border-radius: 10px;
-  max-width: 100%;
-  margin: 20px auto;
-  justify-content: center;
-  width: 360px;
-  height: 225px;
 }
 
 .about-card {
@@ -230,11 +206,68 @@ footer {
 
 .contact-info {
   align-items: center;
-  padding: 15px;
+  padding: 15px 0px 0px 5px;
   border-radius: 10px;
   max-width: 20%;
   margin: 20px auto;
   justify-content: center;
-  border: #004400 solid 2px;
+  border: #004400 solid 3px;
   background-color: white;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 360px;
+  height: 225px;
+  perspective: 1000px;
+  margin: 20px auto;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  font-weight: bold;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: rgb(215, 215, 215);
+}
+
+.flip-card-front img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.flip-card-back {
+  background-color: #004400;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transform: rotateY(180deg);
+  padding: 20px;
+}
+
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* 2 columns */
+  gap: 20px;
+  max-width: 700px;
+  margin: 40px auto;
 }
